[project]
name = "langgraph-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.11.13",
]
